# Rohdex

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  makefile  pyproject.toml  requirements.txt  results.json
app/: main.py
app/core/: __init__.py  config.py  exceptions.py  logger.py  prompts.py
app/models/: email.py  models.py  runs.py
app/routers/: health.py  process.py
app/schemas/: responses.py
app/services/: __init__.py  agent.py  celery.py  file_processing.py  gmail_services.py
attach/: Partie 36223M.xlsx  Partie 36224M.xlsx  invite.ics
images/fastapi/: Dockerfile
images/nginx/: Dockerfile
nginx/: nginx.conf
scripts/: cron_job.sh  invoke_emails.sh
